compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__as_module_const.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\n          pub const data = <<\n            0x1,\n            2,\n            2:size(16),\n            0x4:size(32),\n            \"Gleam\":utf8,\n            4.2:float,\n            <<\n              <<1, 2, 3>>:bits,\n              \"Gleam\":utf8,\n              1024\n            >>:bits\n          >>\n        "
---
import { toBitArray, sizedInt, stringBits, sizedFloat } from "../gleam.mjs";

export const data = /* @__PURE__ */ toBitArray([
  0x1,
  2,
  sizedInt(2, 16, true),
  sizedInt(0x4, 32, true),
  sizedInt(-1, 32, true),
  stringBits("Gleam"),
  sizedFloat(4.2, 64, true),
  sizedFloat(4.2, 32, true),
  toBitArray([toBitArray([1, 2, 3]).buffer, stringBits("Gleam"), 1024]).buffer,
]);
