compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__binary.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 170
expression: "\nfn go(x) {\n  <<x:binary>>\n}\n"
---
import { toBitString } from "../gleam.mjs";

function go(x) {
  return toBitString([x.buffer]);
}

