compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bit_array_assignment_discard.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 2076
expression: "\npub fn main() {\n let assert <<_ as number>> = <<10>>\n number\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
 let assert <<_ as number>> = <<10>>
 number
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let $ = toBitArray([10]);
  if ($.bitSize !== 8) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 18, end: 28, pattern_start: 29, pattern_end: 44 }
    )
  }
  let number = $.byteAt(0);
  return number;
}
