compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bit_array_dynamic_slice.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  let i = 4\n  <<<<0xAB>>:bits-size(i)>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let i = 4
  <<<<0xAB>>:bits-size(i)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  let i = 4;
  return toBitArray([bitArraySlice(toBitArray([171]), 0, i)]);
}
