compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bit_array_literal_string_constant_is_treated_as_utf8.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "pub const a = <<\"hello\", \" \", \"world\">>"
---
----- SOURCE CODE
pub const a = <<"hello", " ", "world">>

----- COMPILED JAVASCRIPT
import { toBitArray, stringBits } from "../gleam.mjs";

export const a = /* @__PURE__ */ toBitArray([
  stringBits("hello"),
  stringBits(" "),
  stringBits("world"),
]);
